update autorest.gotest baseline files
in response to 971296885143b12375772775892436668137e142

--- a/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/go-tester-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/go-tester-pre.yaml
@@ -6093,7 +6093,7 @@ operationGroups:
             language:
               default: &ref_217
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_223
@@ -8085,7 +8085,7 @@ operationGroups:
             language:
               default: &ref_298
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_302
