--- a/packages/autorest.gotest/test/integrationtest/output/appplatform/armappplatform/__debug/test-modeler-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/appplatform/armappplatform/__debug/test-modeler-pre.yaml
@@ -7866,7 +7866,7 @@ operationGroups:
             language:
               default: &ref_294
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_299
@@ -8384,7 +8384,7 @@ operationGroups:
             language:
               default: &ref_307
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_310
@@ -8577,7 +8577,7 @@ operationGroups:
             language:
               default: &ref_316
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_321
@@ -10371,7 +10371,7 @@ operationGroups:
             language:
               default: &ref_388
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_393
@@ -10638,7 +10638,7 @@ operationGroups:
             language:
               default: &ref_401
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_406
@@ -10910,7 +10910,7 @@ operationGroups:
             language:
               default: &ref_414
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_420
@@ -11357,7 +11357,7 @@ operationGroups:
             language:
               default: &ref_435
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_440
@@ -11619,7 +11619,7 @@ operationGroups:
             language:
               default: &ref_448
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_453
@@ -12149,7 +12149,7 @@ operationGroups:
             language:
               default: &ref_471
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_477
@@ -12505,7 +12505,7 @@ operationGroups:
             language:
               default: &ref_485
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_489
@@ -12726,7 +12726,7 @@ operationGroups:
             language:
               default: &ref_495
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_501
@@ -13920,7 +13920,7 @@ operationGroups:
             language:
               default: &ref_547
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_554
@@ -14268,7 +14268,7 @@ operationGroups:
             language:
               default: &ref_562
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_567
@@ -14507,7 +14507,7 @@ operationGroups:
             language:
               default: &ref_573
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_580
@@ -15247,7 +15247,7 @@ operationGroups:
             language:
               default: &ref_605
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_611
@@ -15575,7 +15575,7 @@ operationGroups:
             language:
               default: &ref_619
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_623
@@ -16241,7 +16241,7 @@ operationGroups:
             language:
               default: &ref_646
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_653
@@ -16556,7 +16556,7 @@ operationGroups:
             language:
               default: &ref_661
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_666
@@ -16795,7 +16795,7 @@ operationGroups:
             language:
               default: &ref_672
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_679
@@ -17550,7 +17550,7 @@ operationGroups:
             language:
               default: &ref_705
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_712
@@ -17946,7 +17946,7 @@ operationGroups:
             language:
               default: &ref_720
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_725
@@ -18185,7 +18185,7 @@ operationGroups:
             language:
               default: &ref_731
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_738
@@ -19008,7 +19008,7 @@ operationGroups:
             language:
               default: &ref_768
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_773
@@ -19237,7 +19237,7 @@ operationGroups:
             language:
               default: &ref_779
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_784
@@ -19466,7 +19466,7 @@ operationGroups:
             language:
               default: &ref_790
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_795
