--- a/packages/autorest.gotest/test/integrationtest/output/machinelearningservices/armmachinelearningservices/__debug/test-modeler-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/machinelearningservices/armmachinelearningservices/__debug/test-modeler-pre.yaml
@@ -39044,7 +39044,7 @@ operationGroups:
             language:
               default: &ref_1304
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1309
@@ -39341,7 +39341,7 @@ operationGroups:
             language:
               default: &ref_1317
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1320
@@ -39542,7 +39542,7 @@ operationGroups:
             language:
               default: &ref_1326
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1332
@@ -39999,7 +39999,7 @@ operationGroups:
             language:
               default: &ref_1351
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1348
@@ -40465,7 +40465,7 @@ operationGroups:
             language:
               default: &ref_1373
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1376
@@ -41020,7 +41020,7 @@ operationGroups:
             language:
               default: &ref_1397
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1400
@@ -43913,7 +43913,7 @@ operationGroups:
             language:
               default: &ref_1481
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1487
@@ -44563,7 +44563,7 @@ operationGroups:
             language:
               default: &ref_1495
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1502
@@ -44832,7 +44832,7 @@ operationGroups:
             language:
               default: &ref_1511
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1518
@@ -45495,7 +45495,7 @@ operationGroups:
             language:
               default: &ref_1544
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1548
@@ -45690,7 +45690,7 @@ operationGroups:
             language:
               default: &ref_1554
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1558
@@ -45885,7 +45885,7 @@ operationGroups:
             language:
               default: &ref_1564
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1568
@@ -48250,7 +48250,7 @@ operationGroups:
             language:
               default: &ref_1660
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1666
@@ -48729,7 +48729,7 @@ operationGroups:
             language:
               default: &ref_1681
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1690
@@ -49062,7 +49062,7 @@ operationGroups:
             language:
               default: &ref_1698
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1706
@@ -49974,7 +49974,7 @@ operationGroups:
             language:
               default: &ref_1735
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1742
@@ -50510,7 +50510,7 @@ operationGroups:
             language:
               default: &ref_1757
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1767
@@ -50901,7 +50901,7 @@ operationGroups:
             language:
               default: &ref_1775
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_1784
@@ -61410,7 +61410,7 @@ operationGroups:
             language:
               default: &ref_2168
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_2174
@@ -65711,7 +65711,7 @@ operationGroups:
             language:
               default: &ref_2304
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_2310
@@ -66192,7 +66192,7 @@ operationGroups:
             language:
               default: &ref_2324
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_2333
@@ -66526,7 +66526,7 @@ operationGroups:
             language:
               default: &ref_2341
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_2349
@@ -67096,7 +67096,7 @@ operationGroups:
             language:
               default: &ref_2366
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_2374
@@ -67903,7 +67903,7 @@ operationGroups:
             language:
               default: &ref_2403
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_2410
@@ -68520,7 +68520,7 @@ operationGroups:
             language:
               default: &ref_2425
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_2435
@@ -68988,7 +68988,7 @@ operationGroups:
             language:
               default: &ref_2443
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_2452
