--- a/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/test-modeler-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/test-modeler-pre.yaml
@@ -6115,7 +6115,7 @@ operationGroups:
             language:
               default: &ref_216
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_221
@@ -6587,7 +6587,7 @@ operationGroups:
             language:
               default: &ref_229
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_232
@@ -6791,7 +6791,7 @@ operationGroups:
             language:
               default: &ref_238
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_243
@@ -7334,7 +7334,7 @@ operationGroups:
             language:
               default: &ref_259
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_265
@@ -7559,7 +7559,7 @@ operationGroups:
             language:
               default: &ref_273
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_276
@@ -8624,7 +8624,7 @@ operationGroups:
             language:
               default: &ref_315
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_319
@@ -9461,7 +9461,7 @@ operationGroups:
             language:
               default: &ref_349
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_355
@@ -9740,7 +9740,7 @@ operationGroups:
             language:
               default: &ref_363
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_367
