--- a/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/test-modeler-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/test-modeler-pre.yaml
@@ -6080,7 +6080,7 @@ operationGroups:
             language:
               default: &ref_217
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_223
@@ -8060,7 +8060,7 @@ operationGroups:
             language:
               default: &ref_298
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_302
