--- a/packages/autorest.gotest/test/integrationtest/output/appplatform/armappplatform/__debug/test-modeler.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/appplatform/armappplatform/__debug/test-modeler.yaml
@@ -7869,7 +7869,7 @@ operationGroups:
             language:
               default: &ref_294
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_299
@@ -8388,7 +8388,7 @@ operationGroups:
             language:
               default: &ref_307
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_310
@@ -8582,7 +8582,7 @@ operationGroups:
             language:
               default: &ref_316
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_321
@@ -10386,7 +10386,7 @@ operationGroups:
             language:
               default: &ref_388
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_393
@@ -10654,7 +10654,7 @@ operationGroups:
             language:
               default: &ref_401
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_406
@@ -10927,7 +10927,7 @@ operationGroups:
             language:
               default: &ref_414
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_420
@@ -11377,7 +11377,7 @@ operationGroups:
             language:
               default: &ref_435
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_440
@@ -11640,7 +11640,7 @@ operationGroups:
             language:
               default: &ref_448
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_453
@@ -12173,7 +12173,7 @@ operationGroups:
             language:
               default: &ref_471
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_477
@@ -12530,7 +12530,7 @@ operationGroups:
             language:
               default: &ref_485
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_489
@@ -12752,7 +12752,7 @@ operationGroups:
             language:
               default: &ref_495
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_501
@@ -13952,7 +13952,7 @@ operationGroups:
             language:
               default: &ref_547
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_554
@@ -14301,7 +14301,7 @@ operationGroups:
             language:
               default: &ref_562
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_567
@@ -14541,7 +14541,7 @@ operationGroups:
             language:
               default: &ref_573
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_580
@@ -15285,7 +15285,7 @@ operationGroups:
             language:
               default: &ref_605
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_611
@@ -15614,7 +15614,7 @@ operationGroups:
             language:
               default: &ref_619
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_623
@@ -16284,7 +16284,7 @@ operationGroups:
             language:
               default: &ref_646
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_653
@@ -16600,7 +16600,7 @@ operationGroups:
             language:
               default: &ref_661
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_666
@@ -16840,7 +16840,7 @@ operationGroups:
             language:
               default: &ref_672
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_679
@@ -17599,7 +17599,7 @@ operationGroups:
             language:
               default: &ref_705
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_712
@@ -17996,7 +17996,7 @@ operationGroups:
             language:
               default: &ref_720
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_725
@@ -18236,7 +18236,7 @@ operationGroups:
             language:
               default: &ref_731
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_738
@@ -19062,7 +19062,7 @@ operationGroups:
             language:
               default: &ref_768
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_773
@@ -19292,7 +19292,7 @@ operationGroups:
             language:
               default: &ref_779
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_784
@@ -19522,7 +19522,7 @@ operationGroups:
             language:
               default: &ref_790
                 name: ResumeToken
-                description: Resumes the LRO from the provided token.
+                description: ''
                 byValue: true
                 isResumeToken: true
                 paramGroup: &ref_795
