--- a/eng/pipelines/templates/steps/publish-release.yaml
+++ b/eng/pipelines/templates/steps/publish-release.yaml
@@ -9,7 +9,7 @@ steps:
   - pwsh: |
       $currentVersion = node -p -e "require('./packages/${{ parameters.PackagePath }}/package.json').version"
       $releaseNotes = ${{ parameters.ReleaseNotes }}
-      if (${{ parameters.PublishDevVersion }} -eq 'true') {
+      if ('${{ parameters.PublishDevVersion }}' -eq 'true') {
         $currentVersion="$currentVersion-$(Build.BuildNumber)"
         $releaseNotes = "Preview version of ${{ parameters.ReleaseNotes }}"
       }
@@ -24,9 +24,9 @@ steps:
         --token $(azuresdk-github-pat) `
         --repo autorest.go `
         --owner azure `
-        --name "${{ parameters.ReleaseName }}" `
+        --name '${{ parameters.ReleaseName }}' `
         --tag v$currentVersion `
-        --notes=$releaseNotes `
+        --notes='$releaseNotes' `
         --prerelease `
         --editRelease false `
         --assets ${{ parameters.PackageName }}-$currentVersion.tgz `
